# python_project_semantic_search

./: .gitignore  Dockerfile  README.md  main.py  pyproject.toml
.github/workflows/: semantic_search_test.yml
data/: video_ids.csv  video_ids.parquet  video_transcripts.csv  video_transcripts.parquet
exceptions/: custom_exceptions.py
src/: app.py  eda.ipynb  functions.py  get_video_data.py  perform_data_ingestion.py
src/data_science/: create_video_index.ipynb  develop_models.ipynb  execute_search_function.ipynb
tests/: test_UI.ipynb
tests/functional/: test_api.py
tests/unit/: test_return_search_result_indices.py
