[project]
name = "semantic-search-yt"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "fastapi[standard]>=0.115.12",
    "gradio>=5.32.0",
    "ipykernel>=6.29.5",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.3",
    "polars>=1.30.0",
    "requests>=2.32.3",
    "sentence-transformers>=4.1.0",
    "youtube-transcript-api>=1.0.3",
]

[dependency-groups]
dev = [
    "mypy>=1.15.0",
    "pandas-stubs>=2.2.3.250308",
    "pytest>=8.3.5",
    "pytest-mock>=3.14.0",
    "ruff>=0.11.12",
]
